test_projects/syntax_error/main.ts
export function main(){
	console.log(5zzzz);
}